# college

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: App_Architecture.txt  config.py  main.py  requirements.txt
app/data/: disease_info.db
app/templates/: index.html
app/uploaded_images/: Bacterial_47_20260423_114714.json  Bacterial_47_20260423_114726.json  Psoriasis_69_20251119_004807.json  Psoriasis_69_20251119_005038.json  Psoriasis_80_20260423_114815.json  eczema_40_20260423_111745.json  eczema_40_20260423_113517.json  eczema_44_20251119_005819.json  fungal_40_20260423_115852.json  fungal_99_20251119_005212.json  fungal_99_20251119_005335.json  fungal_99_20251119_005619.json  fungal_99_20251119_005630.json  fungal_99_20251119_005650.json  fungal_99_20251119_005702.json  fungal_99_20251119_005756.json  normal_52_20251119_005917.json  normal_62_20260423_121820.json  normal_62_20260423_130802.json  normal_62_20260423_131148.json  normal_89_20251119_005053.json  normal_89_20260423_121439.json  normal_89_20260423_122136.json  normal_89_20260423_133341.json  normal_97_20260423_111855.json  parasitic_infection_99_20251119_005736.json  parasitic_infection_99_20260423_111831.json  parasitic_infection_99_20260423_114902.json  parasitic_infection_99_20260423_130642.json  viral_51_20251119_005835.json  viral_58_20260423_114750.json
app/utils/: model_loader.py
app/validators/: fast_validator.py  image_corrupt.py  image_quality.py
docs/: mkdocs.yml  skin_data.docx
docs/docs/: index.md
notebooks/7_class/: EfficientNet-B4.ipynb  (+2 more)
(+2 files in other folders)
